tests run from mvn test (update mockito version was the fix)